# esp32s3-gc9a01-lvgl

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
STL files/: mmWaveHLK-LD1125H.stl  rotary-encoder-knob.stl
main/: CMakeLists.txt  button.c  button.h  display.c  display.h  esp_interrupt.c  esp_interrupt.h  gc9a01.c  gc9a01.h  hlk-ld1125h.c  hlk-ld1125h.h  lvgl_demo_ui.c  lvgl_demo_ui.h  main.c  main.h  mqtt.c  mqtt.h  rotary_encoder.c  rotary_encoder.h  sntp.c  sntp.h  spi_lcd_touch_example_main.c  uart_config.c  uart_config.h  ui_font_wise60.c  ui_helpers.c  ui_helpers.h  ui_img_1321029331.c  wifi_connect.h
main/display/: display.h  gc9a01.c  gc9a01.h  lv_font_montserrat_20.c  lvgl_demo_ui.c  lvgl_demo_ui.h  ui_helpers.c  ui_helpers.h  ui_img_bg3_png.c  ui_img_bulb_png.c  ui_img_off_bulb_png.c  ui_img_patern3_png.c  ui_page.c  ui_page.h
main/gpio/: gpio_config.c  gpio_config.h
main/hardware/: button.c  button.h  hlk-ld1125h.h  rotary_encoder.c  rotary_encoder.h
main/timer/: systimer.c  systimer.h
main/wireless/: mqtt.c  mqtt.h  sntp.c  wifi_connect.c  wifi_connect.h
