idf_component_register(SRCS "lvgl_demo_ui.c" "rotary_encoder.c" "rotary_encoder.c" "main.c" "gc9a01.c" "ui_img_patern3_png.c"
			"display.c" "ui_helpers.c" "ui_font_wise60.c" "lv_font_montserrat_20.c" "ui_img_1321029331.c" "wifi_connect.c" "mqtt.c" "sntp.c" "uart_config.c"
                       INCLUDE_DIRS ".")
