idf_component_register(
SRCS "main.c" 
"rotary_encoder.c" 

"uart_config.c" 
"hlk-ld1125h.c"
SRCS "wireless/sntp.c"
SRCS "wireless/mqtt.c"
SRCS "wireless/wifi_connect.c"
SRCS "display/ui_img_patern3_png.c"
SRCS "display/ui_helpers.c"
SRCS "display/ui_font_wise60.c"
SRCS "display/ui_img_1321029331.c"
SRCS "display/lv_font_montserrat_20.c"
SRCS "display/lvgl_demo_ui.c"
SRCS "display/display.c"
SRCS "display/gc9a01.c"
SRCS "gpio/gpio_config.c"
INCLUDE_DIRS ".")
